# shadwell

./: .pre-commit-config.yaml  API.txt  README.md  setup.cfg  tox.ini
src/shadwell/: candidate.py  finder.py
src/shadwell/sources/: json_api.py
tests/: test_finder.py  test_import.py
wip/: checker.py
wip/src/shadwell/: finder.py
wip/tests/: test_candidate.py
