[metadata]
name = shadwell
version = 0.1
description = A package finder library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pfmoore/shadwell
author = Paul Moore
author_email = p.f.moore@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = packaging
maintainer = Paul Moore
maintainer_email = p.f.moore@gmail.com
project_urls =
    Source=https://github.com/pfmoore/shadwell
    Tracker=https://github.com/pfmoore/shadwell/issues

[options]
packages = find:
python_requires = >=3.5
package_dir =
    =src

[options.extras_require]
test =
    pytest >= 4
    virtualenv >= 20

[options.packages.find]
where = src

[sdist]
formats = gztar

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
line_length = 88
known_first_party = shadwell
known_third_party = pytest,setuptools,virtualenv

[flake8]
max-line-length = 88
ignore = E203, W503

[tool:pytest]
junit_family = xunit2
